--- a/template/bikeentry.html
+++ b/template/bikeentry.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "template/base.html" %}
 {% block title %}BikeGears - Bike Entry{% endblock %}
 {% block content %}
 <h2>{{submitValue}} bike</h2>
@@ -12,7 +12,7 @@
                     <td class="nowrap"><label for="id_brand">Brand</label></td>
                     <td>{{ form.brand }}
                         {% if form.brand.errors %}
-                        <span class="error">{{ form.brand.errors|join:", "}}</span>
+                        <span class="error">{{ form.brand.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
@@ -20,7 +20,7 @@
                     <td class="nowrap"><label for="id_model">Model</label></td>
                     <td>{{ form.model }}
                         {% if form.model.errors %}
-                        <span class="error">{{ form.model.errors|join:", "}}</span>
+                        <span class="error">{{ form.model.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
@@ -28,7 +28,7 @@
                     <td class="nowrap"><label for="id_year">Year</label></td>
                     <td>{{ form.year }}
                         {% if form.year.errors %}
-                        <span class="error">{{ form.year.errors|join:", "}}</span>
+                        <span class="error">{{ form.year.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
@@ -36,7 +36,7 @@
                     <td class="nowrap"><label for="id_color">Color</label></td>
                     <td>{{ form.color }}
                         {% if form.color.errors %}
-                        <span class="error">{{ form.color.errors|join:", "}}</span>
+                        <span class="error">{{ form.color.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
@@ -44,7 +44,7 @@
                     <td class="nowrap"><label for="id_bikeType">Type</label></td>
                     <td>{{ form.bikeType }} 
                         {% if form.bikeType.errors %}
-                        <span class="error">{{ form.bikeType.errors|join:", "}}</span>
+                        <span class="error">{{ form.bikeType.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
@@ -52,7 +52,7 @@
                     <td class="nowrapTop"><label for="id_description">Description</label></td>
                     <td>{{ form.description }}
                         {% if form.description.errors %}
-                        <span class="error">{{ form.description.errors|join:", "}}</span>
+                        <span class="error">{{ form.description.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
