--- a/template/login.html
+++ b/template/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "template/base.html" %}
 {% block title %}BikeGears - Login{% endblock %}
 {% block content %}
 <h2>Login to BikeGears</h2>
