--- a/template/rideroverview.html
+++ b/template/rideroverview.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "template/base.html" %}
 {% block title %}BikeGears - Rider Overview{% endblock %}
 {% block content %}
 <h2>Rider overview</h2>
@@ -18,9 +18,9 @@
         <th></th>
     </tr>
     {% for ride in rides %}
-    <tr class="{% cycle even,odd %}">
-        <td class="date">{{ride.date|date:"N d, Y"}}</td>
-        <td class="number">{{ride.distanceKm|floatformat:2}}</td>
+    <tr class="{{ loop.cycle('even', 'odd') }}">
+        <td class="date">{{ride.date}}</td>
+        <td class="number">{{ride.distanceKm|round(precision=2)}}</td>
         <td class="date">{{ride.getRideTimeAsString}}</td>
         <td class="number">{{ride.getAverageSpeed}}</td>
         <td>{{ride.rideType.name}}</td>
