--- a/template/ridetypeentry.html
+++ b/template/ridetypeentry.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "template/base.html" %}
 {% block title %}BikeGears - RideType Entry{% endblock %}
 {% block content %}
 <h2>{{submitValue}} ride type</h2>
@@ -12,7 +12,7 @@
                     <td class="nowrap"><label for="id_name">Name</label></td>
                     <td>{{ form.name }}
                         {% if form.name.errors %}
-                        <span class="error">{{ form.name.errors|join:", "}}</span>
+                        <span class="error">{{ form.name.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
@@ -20,7 +20,7 @@
                     <td class="nowrapTop"><label for="id_description">Description</label></td>
                     <td>{{ form.description }}
                         {% if form.description.errors %}
-                        <span class="error">{{ form.description.errors|join:", "}}</span>
+                        <span class="error">{{ form.description.errors|join(', ')}}</span>
                         {% endif %}
                     </td>
                 </tr>
