--- a/template/bikeoverview.html
+++ b/template/bikeoverview.html
@@ -19,6 +19,7 @@
     </tr>
     <tbody>
         {% for bike in bikes %}
+		{% set bikeId = bike.key.id() %}
         <tr class="{{ loop.cycle('even', 'odd') }}">
             <td class="nowrap">{{bike.brand}}</td>
             <td class="nowrap">{{bike.model}}</td>
@@ -26,7 +27,7 @@
             <td>{{bike.color}}</td>
             <td class="nowrap">{{bike.bikeType.name}}</td>
             <td>{{bike.description}}</td>
-            <td><a href="/user/bikeentry?id={{bike.key.id}}">update</a>&nbsp;<a href="/user/bikedelete?id={{bike.key.id}}">delete</a></td>
+            <td><a href="/user/bikeentry?id={{bikeId}}">update</a>&nbsp;<a href="/user/bikedelete?id={{bikeId}}">delete</a></td>
         </tr>
         {% endfor %}
     </tbody>
