--- a/css/bikegears-alt.css
+++ b/css/bikegears-alt.css
@@ -7,6 +7,7 @@
 */
 body { 
     background: #fde7a8 url(../images/backgroundfade.png) repeat-x;
+	/* color: #696969; */
     font-size: small;
     font-family: verdana, sans-serif;
     padding: 0 0 0 0;
