Updated file to make sure the text on the page was accurate with current state of the appliation.

--- a/template/welcome.html
+++ b/template/welcome.html
@@ -17,9 +17,9 @@
 		<li>Page with month to date compare with same month in previous year.</li>
 		<li>Page to query history by date range, possibly with totals for that date range.</li>
 		<li>Include graphs and charts for visual representation of the stats.</li>
-		<li>A way to load up rides that may have stored in spreadsheet or database off-line.</li>
+		<li>A way to load up rides that may have been stored in spreadsheet or database off-line.</li>
+		<li>A way to export ride information in a generic format like CSV, XML or JSON for backup or use in other places.</li>
 		<li>A feedback link so users can ask for stuff that they would like me to add.</li>
 	</ul>
 </p>
-<p>P.S. This application will probably look less than optimal when using MS Internet Explorer 6.0 or lower because in those browsers CSS support is poor and my site uses it a lot. I have no intention of supporting these browsers so you're better off getting a later version of IE or using Safari, Firefox, Opera or something else that supports CSS the way it's meant to be supported.</p>
 {% endblock %}
