More refactoring and coding changes suggested by PyCharm. PEP 8 mentioned many times.

--- a/template/adminwelcome.html
+++ b/template/adminwelcome.html
@@ -6,7 +6,7 @@
     The admin section lets administrators change information that is that is shared by all users. At this moment this is only bike types and ride types which are used when creating bikes and entering rides for each user. At some point we may find other uses for the admin pages function.
 </p>
 <p>
-	Below is a list of values storeds for bike types and ride types.
+	Below is a list of values stored for bike types and ride types.
 </p>
 <h2>Bike types</h2>
 {% if bikeTypes %}
