--- a/template/base.html
+++ b/template/base.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="header">
             {% block header %}
-            <p><a href="/"><img src="/images/bike-gears-title.png"/></a></p>
+            <p><a href="/"><img src="/images/bike-gears-title.png" alt="title image"/></a></p>
             <p>{{user_name}}: <a href="{{url}}">{{url_linktext}}</a></p>
             {% endblock %}
         </div>
