--- a/template/base.html
+++ b/template/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" >
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="{% block stylesheet %}/css/bikegears-alt.css{% endblock %}"/>
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="header">
             {% block header %}
-            <p><a href="/"><img src="/images/bike-gears-title.png" alt="title image"/></a></p>
+            <p><a href="/">BikeGears</a></p>
             <p>{{user_name}}: <a href="{{url}}">{{url_linktext}}</a></p>
             {% endblock %}
         </div>
