--- a/css/bikegears-alt.css
+++ b/css/bikegears-alt.css
@@ -54,7 +54,7 @@ textarea:focus {
 div#container { 
     margin: 20px 30px auto 30px;
     min-width: 780px;
-    background: rgb(250, 250, 250) url(../images/sprockets-scaled-fade-bw.gif) -100px -100px no-repeat fixed;
+    background: whitesmoke url(../images/sprockets-scaled-fade-bw.gif) -100px -100px no-repeat fixed;
     padding: 0 0 0 0; 
     border: 1px solid #999999; 
     border-radius: 5px;
@@ -103,7 +103,7 @@ div#menu {
     margin: 3.6em 1em 4em 1em ;
     padding: 0;
     border: solid #828282;
-    border-width: 1px 0 1px 0;
+    border-width: 1px 0 0 0;
     border-radius: 0px;
 }
 
@@ -136,7 +136,7 @@ div#footer {
     clear: both;
     text-align: center;
     margin: 1em 0 0.75em 0;
-    padding: 0.25em 0 0.25em 0;
+    padding: 1em 0 0.25em 0;
     border: solid #828282;
     border-width: 1px 0 0 0;
 }
@@ -161,7 +161,7 @@ div#footer {
     font-weight: bold;
     color: #828282;
     border-collapse: collapse;
-    border: 0 solid rgb(130, 130, 130);
+    border: 0 solid #828282;
     border-radius: 5px;
 }
 
@@ -206,19 +206,18 @@ fieldset table {
 
 table.tabular {
     width: 90%;
+    background: whitesmoke url(../images/sprockets-scaled-fade-bw.gif) -100px -100px no-repeat fixed;
 }
 
 th { 
-    font-size: 100%; 
-    font-style: italic;
+    font-size: 110%;
+    font-style: normal;
     color: #0d5dc1;
-    padding: 0.2em 5px 0.1em 5px;
+    padding: 0.5em 5px 0.5em 5px;
     vertical-align: top;
     text-align: left;
-    background-color: rgb(255, 255, 255);
-    border-width: 1px 0 1px 0;
-    border-color: rgb(130, 130, 130);
-    border-style: solid;
+    border: 0 solid #828282;
+    border-bottom-width: 1px;
 }
 
 th.date { 
@@ -245,15 +244,15 @@ th.nowrapTop {
 }
 
 th:first-child {
-    border-width: 1px 0 1px 1px;
+    border-width: 0 0 1px 0;
 }
 
 th:last-child {
-    border-width: 1px 1px 1px 0;
+    border-width: 0 0 1px 0;
 }
 
 tr.odd {
-    background: white;
+    /* background: whitesmoke; */
 }
 
 tr.even {
@@ -261,18 +260,18 @@ tr.even {
 }
 
 td { 
-    padding: 1px 5px 1px 5px;
+    padding: 0.4em 5px 0.4em 5px;
     vertical-align: baseline;
-    border: 0 solid rgb(130, 130, 130);
+    border: 0 solid #828282;
     border-bottom-width: 1px;
 }
 
 td:last-child {
-    border-width: 0 1px 1px 0;
+    /* border-width: 0 1px 1px 0; */
 }
 
 td:first-child {
-    border-width: 0 0 1px 1px;
+    /* border-width: 0 0 1px 1px; */
 }
 
 td.date { 
