Added appengine image to local images directory to avoid redirects and reloads when the image is not changed. Changed link to the image in base html template.

--- a/template/base.html
+++ b/template/base.html
@@ -33,7 +33,7 @@
         </div>
         <div id="footer">
             {% block footer %}
-            <a href="http://appengine.google.com"><img src="http://developers.google.com/appengine/images/appengine-silver-120x30.gif"
+            <a href="http://appengine.google.com"><img src="/images/appengine-silver-120x30.gif"
 			alt="Powered by Google App Engine" /></a>
             {% endblock %}
         </div>
