First changes to start changes to use of datastore. Added profile and made user the parent of the bike entity.

--- a/template/bikeentry.html
+++ b/template/bikeentry.html
@@ -6,7 +6,7 @@
 <p>
     <form action="/user/bikeentry" method="post">
         <fieldset>
-			<input name="_id" type="hidden" value="{{id}}">
+			<input name="key" type="hidden" value="{{key}}">
             <table>
                 <tr>
                     <td class="nowrap"><label for="id_brand">Brand</label></td>
